2015-03-15 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-dossier-new-mini.ui: fix widget name.

	* src/ui/ofa-dossier-treeview.c: fix code not set.

	* src/ui/ofa-reconciliation.c: doesn't try to display the lines 
	count if no BAT file is loaded. 

	* src/ui/ofa-export-assistant.c,
	* src/ui/ofa-export-assistant.ui: Entry models is renamed as
	 OpeTemplates (todo #737).

	* src/ui/ofa-check-integrity-bin.ui: the detail textview expands
	vertically (todo #736).

	* src/ui/ofa-ledger-close.ui: center the date label (todo #735).

	* src/core/ofo-rate.c: fix export field separator.

	Move ofoOpeTemplate to ofaBox (todo #466)

	* src/api/my-utils.h,
	* src/core/my-utils.c: new function my_utils_char_replace().

	* src/api/ofa-box.h,
	* src/core/ofa-box.c: new function ofa_box_get_csv_line_ex().

	* src/core/ofo-ope-template.c: updated accordingly.

2015-03-14 Pierre Wieser <pwieser@trychlos.org>

	Define a new date filter composite widget ofaDateFilterBin

	* src/ui/ofa-date-filter-bin.c,
	* src/ui/ofa-date-filter-bin.h:
	src/ui/ofa-date-filter-bin.ui: new files.

	* po/POTFILES.in,
	* src/ui/Makefile.am,
	* src/ui/Makefile.in: updated accordingly.

	* src/ui/ofa-view-entries.c: makes use of ofaDateFilterBin widget.

	* src/ui/ofa-reconciliation.c: makes use of ofaDateFilterBin widget
	 (todo #724).

	* src/ui/ofa-pdf-entries-balance.c,
	* src/ui/ofa-print-entries-balance.ui: fix 'Entries Balance' labels.

2015-03-13 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: post-release version bump.

	* src/ui/ofa-reconciliation.c:
	- let the user manually reconciliate an entry with a bat line (todo #721)
	- fix BAT line proposition (todo #722)
	- display count+unused batlines (todo #726).

	* src/ui/ofa-bat-store.c: sort per descending identifier (todo #725).

	* src/ui/ofa-bat-treeview.c: add padding around the frame.

2015-03-12 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-reconciliation.c: fix BAT line proposition (todo #718).
