@@ -4,8 +4,11 @@
 
 	* src/ui/ofa-dossier-treeview.c: fix code not set.
 
-	* src/ui/ofa-reconciliation.c: doesn't try to display the lines 
-	count if no BAT file is loaded. 
+	* src/ui/ofa-reconciliation.c:
+	- doesn't try to display the lines count if no BAT file is loaded
+	- make sure the bank reconciliated balance doesn't depend of the
+	  filters (todo #730)
+	- fix the focus-out event after having quit the application. 
 
 	* src/ui/ofa-export-assistant.c,
 	* src/ui/ofa-export-assistant.ui: Entry models is renamed as
